modify to change type write style

--- a/manuscript.tex
+++ b/manuscript.tex
@@ -15,6 +15,8 @@
 \input{dark-a5j.sty}
 
 \begin {document}
+\begin {tt}
 \input {IntroductionMakeCompilerWithErlang}
 \input {okuduke}
+\end {tt}
 \end{document}
