--- a/references.bib
+++ b/references.bib
@@ -8,7 +8,7 @@
 
 @misc{LearnYouSomeErlang,
   title={Learn you some Erlang for great good! },
-  howpublished={https://www.ymotongpoo.com/works/lyse-ja/index.html}
+  howpublished="\url{https://www.ymotongpoo.com/works/lyse-ja/index.html}"
 }
 
 
@@ -23,26 +23,91 @@
 }
 
 
+
 @misc{CGrammar,
-  title="{ANSI C grammar}",
-  howpublished=\url"{http://www.lysator.liu.se/c/ANSI-C-grammar-y.html}"
+  title={ANSI C grammar},
+  author={Stevens, Brian L and Lewis, Frank L},
+  year={2003},
+  howpublished={\url{http://www.lysator.liu.se/c/ANSI-C-grammar-y.html}}
 }
 
 
-@url{,
-  title={},
+@misc{cerl,
+  title={cerl},
   howpublished={https://www.it.uu.se/research/group/hipe/cerl/}
 }
 
-@url{,
-  title={},
-  howpublished={http://studzien.github.io/hack-vm/part1.html}
+@misc{hackvm,
+  title={hackvm},
+  howpublished={http://studzien.github.io/hack-vm/part1.html}}
+
+
+
+
+@misc{ulangXrlRegex,
+  title={ulang xrl Regex},
+  howpublished={https://github.com/oskimura/ulang/blob/master/ulang/src/ulang.xrl#L1-L7}
+}
+
+@misc{UlangXrlRulePart,
+  title={ulang xrl rule part},
+  howpublished={https://github.com/oskimura/ulang/blob/master/ulang/src/ulang.xrl#L9-L62}
+}
+
+@misc{UlangXrlInt,
+  title={ulang xrl int},
+  howpublished={https://github.com/oskimura/ulang/blob/master/ulang/src/ulang.xrl#L45}
+}
+
+@misc{ulangXrlTo_atom,
+  title={ulang xrl to_atom},
+  howpublished={https://github.com/oskimura/ulang/blob/master/ulang/src/ulang.xrl#L69}
+}
+
+@misc{UlangXrlPlus,
+  title={ulang xrl plus},
+  howpublished={https://github.com/oskimura/ulang/blob/master/ulang/src/ulang.xrl#L14}
+}
+
+@misc{ErlangPareser,
+  title={erlang parser},
+  howpublished={https://github.com/blackberry/Erlang-OTP/blob/master/lib/stdlib/src/erl_parse.yrl}
+}
+
+@misc{UlangYacc,
+  title={ulang yacc},
+  howpublished={https://github.com/oskimura/ulang/blob/master/ulang/src/ulang_yecc.yrl#L1}
+}
+
+@misc{UlangYaccNonterminals,
+  title={ulang yacc　nonterminals},
+  howpublished={https://github.com/oskimura/ulang/blob/master/ulang/src/ulang_yecc.yrl#L3}
+}
+
+@misc{UlangYaccRulePart,
+  title={ulang yacc rule part},
+  howpublished={https://github.com/oskimura/ulang/blob/master/ulang/src/ulang_yecc.yrl#L9-L160}
+}
+
+@misc{useless,
+  title={useless},
+  howpublished={https://gist.github.com/oskimura/7386c37260528bf208b1}
+}
+
+@misc{CompilerNoenv_forms,
+  title={compiler noenv_forms},
+  howpublished={https://github.com/oskimura/ulang/blob/master/ulang/src/compiler.erl#L13-L14}
+}
+
+@misc{SampleCode,
+  title={sample code},
+  howpublished={https://gist.github.com/oskimura/e5b58a789e74be75c60c}
+}
+
+@misc{ErlangExpression,
+  title={erlang expression},
+  howpublished={http://erlang.org/doc/reference_manual/expressions.html}
 }
 
 
 
-
-@url{,
-  title={},
-  url={}
-}
