--- a/manuscript.tex
+++ b/manuscript.tex
@@ -9,6 +9,7 @@
 \usepackage{ascmac}
 \usepackage{fancybox}
 \usepackage{url}
+\usepackage{textcomp}
 \pagestyle{plain}
 
 \def\tightlist{\itemsep1pt\parskip0pt\parsep0pt}
