add book reference

--- a/references.bib
+++ b/references.bib
@@ -5,12 +5,33 @@
   publisher={John Wiley \& Sons}
 }
 
-
-@misc{LearnYouSomeErlang,
-  title={Learn you some Erlang for great good! },
-  howpublished="\url{https://www.ymotongpoo.com/works/lyse-ja/index.html}"
+@book{LearnYouSomeErlang,
+  title={すごいErlangゆかいに学ぼう!},
+  author={Fred Hebert (著), 山口 能迪 (翻訳)},
+  year={2014},
+  publisher={オーム社}
 }
 
+@book{ProgrammingErlang,
+  title={プログラミングErlang },
+  author={Joe Armstrong  (著), 榊原一矢 (翻訳)},
+  year={2008},
+  publisher={オーム社}
+}
+
+@book{ErlangProgramming,
+  title={Erlangプログラミング },
+  author={Francesco Cesarini (著), Simon Thompson (著), 佐藤 嘉一 (翻訳)},
+  year={2010/7/26},
+  publisher={オライリージャパン}
+}
+
+@book{Compiler,
+  title={コンパイラ―原理・技法・ツール (Information & Computing)},
+  author={A.V. エイホ  (著), R. セシィ (著), J.D. ウルマン (著), M.S. ラム  (著)},
+  year={2009},
+  publisher={サイエンス社}
+}
 
 @misc{EscriptManual,
   title={escript manual},
